SERVER-55169: Handle timeseries bucket collections in TenantCollectionCloner